# shock_cooling

./: Full_batch_12_2022_Z_1_01_key.mat  PhotoUtils.py  README.md  blackbody_tools.py  fit_SC.py  fit_bb_extinction.py  params.py
Filters/: I_Nickel2.txt  LCO_AA_SDSS.gp.txt  ZTF20aaynrrh_interpolation_dates.ascii  ZTF20abccixp_formatted_photometry.ascii  ZTF_transmission_i_from_twiki.ascii
SCONe/: pyproject.toml  setup.py
SCONe/Filters/: LCO_AA_DDOX-51-008.txt  LCO_AA_SDSS.ip.txt  NOT_i.txt  NOT_r.txt  NOT_z.txt  ZTF21aaqhhfu_interpolation_dates.ascii
SCONe/Filters/lco_filter_curves/: LCO_AA_solr-vr-008.txt
SCONe/Filters/lco_filter_curves/original/: DDOX-51-008.txt  NBND-HB-008.txt
SCONe/SCONe/: PhotoUtils.py  blackbody_tools.py
SCONe/SCONe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SCONe/scipts/: fit_SC.py  fit_bb_extinction.py
SCONe/scripts/: fit_SC.py  fit_bb_extinction.py
SCONe/tests/: params.py  params_2013fs.py  params_2020jfo.py
SCoNe/: LICENSE
SCoNe_pack/SCoNe/: README.md  pyproject.toml  setup.py
SCoNe_pack/SCoNe/Filters/: LCO_AA_SDSS.up.txt  NOT_g.txt  NOT_u.txt
SCoNe_pack/SCoNe/Filters/lco_filter_curves/: LCO_AA_PSTR-YX-avg.txt  LCO_AA_SDSS.up.txt  LCO_AA_astrodon.uv.txt  LCO_AA_bssl-bx-004.txt  LCO_AA_bssl-ix-023.txt  LCO_AA_bssl-ux-022.txt
SCoNe_pack/SCoNe/SCoNe.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SCoNe_pack/SCoNe/tests/: ZTF20aaynrrh_dates.txt
SNeSCOPE/: .gitignore  README.md  pyproject.toml  setup.py
barak/: interp.py
test_files/: ZTF20aaynrrh_detections_ebv_corr.ascii
(+43 files in other folders)
