[project]
name = "SCoNe_idoirani"
version = "0.0.1"
authors = [
  { name="Ido Irani", email="idoirani@gmail.com" },
]
description = "Shock Cooling emission fitter"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
"Homepage" = "https://github.com/idoirani/shock_cooling"

